# TRexRewrite-NodeJs

./: .gitignore  README.md  package.json  status.txt
bench/: Cargo.toml  README.md  rustfmt.toml
docs/: System-Diagram.xml  json_samples.json
docs/json_schema/: README.md  schema.json
lib/: index.js  operations.js  trex.js
native/: Cargo.toml
native/src/: conn_queues.rs  global_vector.rs  json_conversions.rs  lib.rs  operations.rs
parser/: .gitignore  Declare.g4  Declare.java  RuleDefinition.g4  RuleDefinition.java  RuleDefinitionSubsetListener.java  Rules.g4  readme.md  set_antlr.sh
scripts/: declare_event.sh  define_rule.sh  getconnection.sh  status.sh  subscribe.sh  testing_fire.sh  trex_client_test.sh  unsubscribe.sh
scripts/operations/: 1_getconnection.sh  2_subscribe.sh  3_unsubscribe.sh  4_getnotification.sh  5_publish.sh  6_unknown_publish.sh  7_declare_event.sh  8_define_rule.sh
scripts/sample_json/: declare-event.json  define-rule.json  publish.json  unsubscribe.json
scripts/tools/: complete_test.sh  multi_subscribers_evaluation.sh  testing.sh  testing_fire.sh  testing_fire_from_scratch.sh  trex_client_test.sh
tesla/: Cargo.toml  README.md
tesla/src/: expressions.rs  lib.rs  predicates.rs
trex/: Cargo.toml  README.md
trex/src/: aggregators.rs  lib.rs  listeners.rs  rule_checks.rs  rule_processor.rs  stack.rs
trex/src/cache/: gdfs_cache.rs  gds1_cache.rs  gdsf_cache.rs  mod.rs  ownable.rs
trex/src/expressions/: evaluation.rs  inference.rs  mod.rs  operations.rs
trex/src/sqlite/: mod.rs  query_builder.rs
wrapper/: Cargo.toml
(+1 files in other folders)
