[package]
name = "trex-rewrite-nodejs"
version = "0.1.0"
authors = ["daniel <danielnaveda88@gmail.com>"]
license = "MIT"

[lib]
name = "trex_rewrite_nodejs"
crate-type = ["dylib"]

[dependencies]
neon = "0.1"
chrono = "^0.2"
rusqlite = "^0.7"
rand = "^0.3"
clap = "^2"
num_cpus = "^1"
regex = "^0.1"
tesla = { path = "../tesla/" }
trex = { path = "../trex/" }
